--- a/content/site-config.json
+++ b/content/site-config.json
@@ -18,8 +18,7 @@
     "Logan",
     "Hryum",
     "Smithfield",
-    "Richmond",
-    "Brigham City"
+    "Richmond"
   ],
   "socialMedia": {
     "facebook": "",
