--- a/content/site-config.json
+++ b/content/site-config.json
@@ -26,7 +26,7 @@
     "nextdoor": "",
     "google": ""
   },
-  "headerTextStyle": "dark",
+  "headerTextStyle": "auto",
   "headerCtaStyle": "accent",
   "bannerLayout": "contained",
   "bannerStyle": "secondary",
