--- a/content/site-config.json
+++ b/content/site-config.json
@@ -16,13 +16,9 @@
   },
   "serviceAreas": [
     "Logan",
-    "Cache Valley",
-    "Hyrum",
+    "Hryum",
     "Smithfield",
-    "Richmond",
-    "Providence",
-    "Millville",
-    "North Logan"
+    "Richmond"
   ],
   "socialMedia": {
     "facebook": "",
